# backend/src/app.ts
@@ -3,6 +3,7 @@ import cors from "cors";
 import dotenv from "dotenv";
 import {setupSwagger} from "./config/swager";
 import authRoute from "./routes/authRoute";
+import profileRoute from "./routes/profileRoute";   
 import { setup } from "swagger-ui-express";
 
 dotenv.config();
@@ -16,5 +17,6 @@ app.use(express.json());
 app.get("/", (req, res) => res.send("Hello World!"));
 
 app.use("/api/auth", authRoute);
+app.use("/api/profile", profileRoute);
 
 export default app;
